--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "react": "15.2.1",
     "react-native": "0.29.1",
+    "react-native-image-progress": "^0.5.0",
+    "react-native-progress": "^3.0.1",
     "react-native-swiper": "^1.4.6"
   }
 }
